# itd-sdk

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
examples/: README.md
examples/stream/: README.md  basic_stream.py  filter_notifications.py  notification_logger.py  stop_stream.py
itd/: __init__.py  client.py  enums.py  exceptions.py  request.py
itd/models/: __init__.py  event.py  file.py  pagination.py  post.py
itd/routes/: auth.py  comments.py  files.py  hashtags.py  notifications.py  posts.py  reports.py  users.py  verification.py
tests/: settings.py  test_like.py
