[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "itd-sdk"
version = "1.0.0"
description = "ITD client for python"
readme = "README.md"
authors = [
  { name = "firedotguy", email = "nta16022013@gmail.com" }
]
license = "MIT"
dependencies = [
  "requests", "pydantic"
]
requires-python = ">=3.9"
